// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AutosuggestEmoji /> > renders emoji with custom url 1`] = `
<div
  className="autosuggest-emoji"
>
  <img
    alt="foobar"
    className="emojione"
    src="http://example.com/emoji.png"
  />
  <div
    className="autosuggest-emoji__name"
  >
    :foobar:
  </div>
</div>
`;

exports[`<AutosuggestEmoji /> > renders native emoji 1`] = `
<div
  className="autosuggest-emoji"
>
  <img
    alt="💙"
    className="emojione"
    src="/emoji/1f499.svg"
  />
  <div
    className="autosuggest-emoji__name"
  >
    :foobar:
  </div>
</div>
`;
